// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image /> should render fixed size images 1`] = `
<div>
  <div
    class="fixedImage gatsby-image-wrapper"
    style="position: relative; overflow: hidden; display: inline; width: 100px; height: 100px;"
  >
    <div
      style="background-color: lightgray; width: 100px; opacity: 1; height: 100px; transition-delay: 0.5s;"
      title="Title for the image"
    />
    <img
      alt=""
      class="placeholder"
      src="string_of_base64"
      style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: cover; object-position: center; opacity: 1; transition-delay: 0.5s; color: red;"
      title="Title for the image"
    />
    <picture>
      <source
        srcset="some srcSetWebp"
        type="image/webp"
      />
      <img
        alt="Alt text for the image"
        crossorigin="anonymous"
        height="100"
        itemprop="item-prop-for-the-image"
        src="test_image.jpg"
        srcset="some srcSet"
        style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: cover; object-position: center; opacity: 0; transition: opacity 0.5s;"
        title="Title for the image"
        width="100"
      />
    </picture>
    <noscript>
      &lt;picture&gt;&lt;source type='image/webp' srcset="some srcSetWebp" /&gt;&lt;img width="100" height="100" srcset="some srcSet" src="test_image.jpg" alt="Alt text for the image" title="Title for the image" style="position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
    </noscript>
  </div>
</div>
`;

exports[`<Image /> should render fluid images 1`] = `
<div>
  <div
    class="fixedImage gatsby-image-wrapper"
    style="position: relative; overflow: hidden; display: inline;"
  >
    <div
      style="width: 100%; padding-bottom: 66.66666666666667%;"
    />
    <div
      style="background-color: lightgray; position: absolute; top: 0px; bottom: 0px; opacity: 1; right: 0px; left: 0px; transition-delay: 0.5s;"
      title="Title for the image"
    />
    <img
      alt=""
      class="placeholder"
      src="string_of_base64"
      style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: cover; object-position: center; opacity: 1; transition-delay: 0.5s; color: red;"
      title="Title for the image"
    />
    <picture>
      <source
        sizes="(max-width: 600px) 100vw, 600px"
        srcset="some srcSetWebp"
        type="image/webp"
      />
      <img
        alt="Alt text for the image"
        crossorigin="anonymous"
        itemprop="item-prop-for-the-image"
        sizes="(max-width: 600px) 100vw, 600px"
        src="test_image.jpg"
        srcset="some srcSet"
        style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: cover; object-position: center; opacity: 0; transition: opacity 0.5s;"
        title="Title for the image"
      />
    </picture>
    <noscript>
      &lt;picture&gt;&lt;source type='image/webp' srcset="some srcSetWebp" sizes="(max-width: 600px) 100vw, 600px" /&gt;&lt;img sizes="(max-width: 600px) 100vw, 600px" srcset="some srcSet" src="test_image.jpg" alt="Alt text for the image" title="Title for the image" style="position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
    </noscript>
  </div>
</div>
`;
